# Vietnam-Data-Job-Market-Analysis

./: .env.example  .gitattributes  .gitignore  MASTER_PLAN.md  PROJECT_STATUS.md  README.md  WORK_DIVISION.md  project_plan_job_market.md  pyproject.toml
.github/workflows/: pipeline.yml
analysis/: market_insights.py  market_insights_report.md
analysis/figures/: employers_seniority.html  market_overview.html  skill_dna.html
config/: sources.yml
docs/: DATA_DICTIONARY.md  TAXONOMY.md  labeling_kpi.md  quality_report.md
job_family_engine/: README.md  __init__.py  embed_match.py  engine.py  evaluate.py  integrate.py  llm_judge.py  rules.py  taxonomy.py
job_family_engine/taxonomy/: taxonomy_v1.yml
pipeline/: __init__.py  __main__.py  enrich.py  inspect.py  models.py  scrape.py  topcv_browser_merge.py
pipeline/dataset/: __init__.py  _io.py  agreement.py  annotate.py  cluster.py  discover.py  embed.py  golden.py  llm_clients.py  prompt.py  run.py  schema.py  splits.py  taxonomy.py  text.py  train_eval.py
pipeline/ingest/: __init__.py  base.py  careerviet.py  glints.py  itviec.py  topcv.py  topdev.py  vietnamworks.py
pipeline/quality/: __init__.py
pipeline/transform/: __init__.py  dates.py  gold.py  load.py  normalize.py  silver.py
pipeline/utils/: config.py  http.py
prompts/: prompt_v1.txt
ref/: company_type.yml  role_keywords.yml  seniority_rules.yml  skills_dictionary.yml
ref/taxonomy/: codebook_v1.md  decision_tree_v1.md  taxonomy_v1.yml  taxonomy_v2.yml
tests/: test_dates.py  test_job_family_engine.py  test_load_cdc.py  test_normalize.py
